# quant-gold-simple

./: .env.example  .gitignore  .pre-commit-config.yaml  00_requirements.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: datasets.json  experiment.json
docs/: 00_project_map.md  01_math_finance_foundations.md  02_data_dictionary.md  03_feature_engineering_notes.md  04_time_series_notes.md  05_machine_learning_notes.md  06_backtesting_notes.md  07_risk_management_notes.md  08_research_log.md  09_todo_and_next_steps.md  10_api_key_setup.md  11_architecture_walkthrough_zh.md  12_git_and_github_textbook_zh.md  13_release_checklist_zh.md
examples/: README.md  run_remote_pipeline.py  run_sample_pipeline.py
src/quant_gold/: __init__.py  settings.py
src/quant_gold/backtest/: simulator.py  walk_forward.py
src/quant_gold/data/: __init__.py  base.py  cache.py  contracts.py  normalizers.py  sources.py
src/quant_gold/evaluation/: __init__.py  metrics.py
src/quant_gold/features/: builders.py
src/quant_gold/models/: __init__.py  baselines.py  model_selection.py  optimizer.py  splitters.py  targets.py
src/quant_gold/pipelines/: __init__.py  v01_pipeline.py
src/quant_gold/utils/: io.py  sample_data.py
tests/: test_backtest.py  test_features.py  test_metrics.py  test_model_selection.py  test_normalizers.py  test_pipeline.py  test_sources.py  test_splitters.py  test_targets.py
