[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "quant-gold-simple"
version = "0.1.0"
description = "A reproducible gold-focused quant research starter built around Alpha Vantage, FRED, and daily-frequency baseline modeling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Codex + User" }
]
keywords = ["quant", "gold", "machine-learning", "backtest", "time-series", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "matplotlib>=3.9.0",
  "numpy>=2.0.0",
  "pandas>=2.2.3",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "scikit-learn>=1.6.1",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
  "pre-commit>=4.0.1",
]

[project.scripts]
quant-gold-v01 = "quant_gold.pipelines.v01_pipeline:main"

[project.urls]
Homepage = "https://github.com/Jerome-Yuxuan-Zhang/quant-gold-simple"
Repository = "https://github.com/Jerome-Yuxuan-Zhang/quant-gold-simple"
Issues = "https://github.com/Jerome-Yuxuan-Zhang/quant-gold-simple/issues"
Documentation = "https://github.com/Jerome-Yuxuan-Zhang/quant-gold-simple/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_gold"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
branch = true
source = ["src/quant_gold"]

[tool.coverage.report]
show_missing = true
skip_empty = true
